--- a/src/styles/modules/_quick-changes.scss
+++ b/src/styles/modules/_quick-changes.scss
@@ -5,7 +5,7 @@
 .place a:nth-child(2) img {
 	margin: 11px 43px;
 }
-.partneri { 
+.partneri {
     margin: 65px 0px 0 71px;
 }
 .content__item-inner h2{
@@ -16,10 +16,12 @@
 #section2 {
 
 }
+.description {
+  max-width: 600px;
+}
 footer {
 	color: #ccc;
-	border-top: 1px solid #EDEDED; 
+	border-top: 1px solid #EDEDED;
 	text-align: center;
 	padding: 25px 0;
-
 }
